--- a/MarkdownToMedium/MarkdownToMedium.csproj
+++ b/MarkdownToMedium/MarkdownToMedium.csproj
@@ -10,6 +10,7 @@
     <RepositoryUrl>https://github.com/lofcz/Markdown2Medium</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <TargetFrameworks>net8.0;netstandard2.0</TargetFrameworks>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
